<resources>
    <string name="app_name"> Task Master </string>
    <string name="ALL_TASKS"> ALL TASKS </string>
    <string name="ADD_TASK"> ADD TASK </string>
    <string name="MY_TASKS"> My Tasks </string>
    <string name="ADD_NEW_TASK">Add a new task</string>
    <string name="ADD_TITLE"> Title </string>
    <string name="ADD_BODY"> Body </string>
    <string name="ADD_SUBMIT"> SUBMIT </string>
    <string name="Back_Home"> Back </string>
    <string name="text_ALLTASKS"> All Tasks </string>
    <string name="settings">settings</string>
    <string name="btn_save">save</string>
    <string name="hint_enter_username">username</string>
    <string name="prompt_please_set_username">Please Set Username in Settings</string>
    <string name="nameTasks"> Tasks</string>


    <string name="Title">Title</string>
    <string name="Description_TaskDetails">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset </string>


    <string name="TASK1"> Task1 </string>
    <string name="TASK2"> Task2 </string>
    <string name="TASK3"> Task3 </string>
    <string name="State"> State </string>
    <string name="Status">Status</string>
    <string name="teamSppinerText">Team</string>

    <string-array name="state">
        <item>NEW</item>
        <item>In_Progress</item>
        <item>Complete</item>
        <item>Assigned</item>
    </string-array>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_signup">Sign Up Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_prompt"> Don\'t have an account? SIGN UP </string>
    <string name="label_enter_code">Enter Verification Code</string>
    <string name="prompt_username">Username</string>
    <string name="Upload">Upload</string>


</resources>